# linphone

submodules/mssilk/: CMakeLists.txt
submodules/msx264/: CMakeLists.txt
submodules/msx264/src/: CMakeLists.txt  msx264.c
